#14 Add unfinished pagination functionality for jots; stop live-reloading while tab is not visible; several bug fixes

--- a/app/assets/stylesheets/components/_hover_notice.css.sass
+++ b/app/assets/stylesheets/components/_hover_notice.css.sass
@@ -10,6 +10,7 @@
   font-size: .9rem
   color: $palette-white
   max-width: 30rem
+  font-family: 'Monda'
 
   &.error
     color: lighten($palette-yellow, 5%)
